// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Checkbox Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-cOFTSb eAnjwB sc-BeQoi dmAMvw"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iTbhny"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eFOcYa StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jjxirM"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bLQvIs StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-cOFTSb eAnjwB sc-BeQoi dmAMvw"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ksonYn"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 xsEBD StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          disabled=""
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iZCHmQ"
            disabled=""
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bLQvIs StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
            disabled=""
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Reversed Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-cOFTSb eAnjwB sc-BeQoi dmAMvw"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iTbhny"
      >
        <span>
          Checkbox
        </span>
        <div
          class="StyledBox-sc-13pk1d4-0 ixUTlT StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jjxirM"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bLQvIs StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Toggle 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-cOFTSb eAnjwB sc-BeQoi dmAMvw"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iTbhny"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 xsEBD StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jjxirM"
            type="checkbox"
          />
          <span
            class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 cjHYZC"
          >
            <span
              class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 cnojYm"
            />
          </span>
        </div>
        <span>
          Toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-cOFTSb eAnjwB sc-BeQoi dmAMvw"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iTbhny"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 xsEBD StyledCheckBox-sc-1dbk5ju-6 eJWclz"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jjxirM"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 bLQvIs StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 bNwZfh"
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;
